--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="addpost.gallery">
+    tools:context=".Home.Home">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
