--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">alphanetwork.herokuapp.com</domain>
+        <domain includeSubdomains="true">knowingisowning.com</domain>
     </domain-config>
 </network-security-config>
 
