--- a/app/src/main/res/layout/activity_addmedia.xml
+++ b/app/src/main/res/layout/activity_addmedia.xml
@@ -8,6 +8,8 @@
     tools:context="com.example.alphanetwork.addmedia.pictureselector.MainActivity">
 
 
+
+
     <RelativeLayout
         android:id="@+id/rl_title"
         android:layout_width="match_parent"
@@ -65,6 +67,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/rl_title"
         android:clipChildren="false">
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -178,6 +182,31 @@
             android:layout_marginRight="8dp"
             android:layout_below="@+id/relLayoutpinky"
             android:overScrollMode="never" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/message"
+            android:visibility="gone"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:text="Compressing video, Please wait."
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/recycler"
+            >
+
+        </TextView>
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/message"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/progressBar"
+            android:visibility="gone"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            >
+
+        </ProgressBar>
 
     </RelativeLayout>
 </RelativeLayout>
