--- a/app/src/main/res/layout/activity_feed_media.xml
+++ b/app/src/main/res/layout/activity_feed_media.xml
@@ -14,6 +14,20 @@
         android:adjustViewBounds="true"
         />
 
+<!--    <VideoView-->
+<!--        android:layout_width="fill_parent"-->
+<!--        android:layout_height="fill_parent"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:id="@+id/videoplayer"-->
+<!--        >-->
+
+<!--    </VideoView>-->
+    <com.devbrackets.android.exomedia.ui.widget.VideoView
+        android:id="@+id/videoplayer"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center"
+        app:useDefaultControls="true"/>
 
     <ProgressBar
         android:layout_width="70dp"
