--- a/app/src/main/res/layout/activity_feed_media.xml
+++ b/app/src/main/res/layout/activity_feed_media.xml
@@ -12,6 +12,7 @@
         android:layout_height="fill_parent"
         android:id="@+id/imageplayer"
         android:adjustViewBounds="true"
+        android:visibility="gone"
         />
 
 <!--    <VideoView-->
@@ -24,9 +25,8 @@
 <!--    </VideoView>-->
     <com.devbrackets.android.exomedia.ui.widget.VideoView
         android:id="@+id/videoplayer"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:useDefaultControls="true"/>
 
     <ProgressBar
