--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -88,7 +88,8 @@
 
         android:textSize="20dp"
         android:textColor="#DF9A10"
-        android:onClick="test"/>
+        />
 
 
 </LinearLayout>
+<!--    android:onClick="test"-->
