--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -7,6 +7,8 @@
     tools:context=".Home.Home"
     android:background="@color/colorBackground">
 
+
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
@@ -21,6 +23,46 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:id="@+id/relLayout1"
+                    android:layout_marginTop="10dp"
+
+                    >
+
+                    <ImageView
+                        android:id="@+id/verified_filter"
+                        android:layout_width="50dp"
+                        android:layout_height="match_parent"
+                        android:src="@mipmap/ic_verified"
+                        android:layout_marginEnd="20dp"
+
+                        android:layout_centerHorizontal="true"
+                        android:layout_alignParentEnd="true"
+                        />
+
+                    <ImageView
+                        android:id="@+id/profession_filter"
+                        android:layout_width="50dp"
+                        android:layout_height="match_parent"
+                        android:src="@mipmap/ic_star"
+                        android:layout_marginStart="20dp"
+
+                        android:layout_centerHorizontal="true"
+                        android:layout_alignParentStart="true"
+                        />
+
+                    <ImageView
+                        android:id="@+id/both_filter"
+                        android:layout_width="50dp"
+                        android:layout_height="match_parent"
+                        android:src="@mipmap/ic_verified_green"
+                        android:layout_centerInParent="true"
+                        />
+
+                </RelativeLayout>
+
 
                 <!--<TextView-->
                     <!--android:id="@+id/topheadelines"-->
@@ -52,6 +94,10 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+
     <include layout="@layout/error"/>
+
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
