--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<network-security-config>-->
-<!--    <domain-config cleartextTrafficPermitted="true">-->
-<!--        <domain includeSubdomains="true">knowingisowning.com</domain>-->
-<!--    </domain-config>-->
-<!--</network-security-config>-->
-
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">192.168.0.107</domain>
+        <domain includeSubdomains="true">knowingisowning.com</domain>
     </domain-config>
 </network-security-config>
+
+<!--<network-security-config>-->
+<!--    <domain-config cleartextTrafficPermitted="true">-->
+<!--        <domain includeSubdomains="true">192.168.0.107</domain>-->
+<!--    </domain-config>-->
+<!--</network-security-config>-->
 
 
 
