--- a/app/src/main/res/layout/activity_feed_media.xml
+++ b/app/src/main/res/layout/activity_feed_media.xml
@@ -23,11 +23,11 @@
 <!--        >-->
 
 <!--    </VideoView>-->
-    <com.devbrackets.android.exomedia.ui.widget.VideoView
-        android:id="@+id/videoplayer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:useDefaultControls="true"/>
+<!--    <com.devbrackets.android.exomedia.ui.widget.VideoView-->
+<!--        android:id="@+id/videoplayer"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:useDefaultControls="true"/>-->
 
     <ProgressBar
         android:layout_width="70dp"
@@ -36,6 +36,16 @@
         android:visibility="visible"
         android:layout_centerInParent="true"
         android:layout_gravity = "center"/>
+
+<!--    <SeekBar-->
+<!--        android:id="@+id/progressBar"-->
+<!--        style="@android:style/Widget.Holo.ProgressBar.Horizontal"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="bottom"-->
+
+<!--        android:layout_margin="40dp"-->
+<!--        android:max="100" />-->
 
 </FrameLayout>
 
